# StrictCheck

./: .gitignore  ArtifactGuide.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RELEASES.md  StrictCheck.cabal  default.nix  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
nix/: sources.json
src/: Continuations.hs  FixGen.hs  Generate.hs  Instances.hs  LazyCoArbitrary.hs  Observe.hs  StrictCheck.hs  Variadic.hs
src/Test/: StrictCheck.hs
src/Test/StrictCheck/: Consume.hs  Curry.hs  Demand.hs  Demands.hs  Generate.hs  Instances.hs  Observe.hs  Produce.hs  Shaped.hs  TH.hs  Variadic.hs
src/Test/StrictCheck/Curry/: Function.hs
src/Test/StrictCheck/Examples/: Lists.hs  Map.hs
src/Test/StrictCheck/Instances/: Tools.hs
src/Test/StrictCheck/Internal/: Inputs.hs  Omega.hs  Shrink.hs  Unevaluated.hs
src/Test/StrictCheck/Observe/: Unsafe.hs
src/Test/StrictCheck/Scratch/: LazyCoArbitrary.hs  Nats.hs  Observe.hs
src/Test/StrictCheck/Shaped/: Flattened.hs
tests/: Entangle.hs  Knapsack.hs  RefTrans.hs  Specs.hs  Tests.hs
