name:                StrictCheck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/StrictCheck#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       spoon >= 0.3.1,
                       deepseq >= 1.4,
                       contravariant >= 1.4,
                       mtl >= 2.2.1,
                       transformers >= 0.5,
                       QuickCheck,
                       data-fix,
                       extra >= 1.6,
                       monad-loops >= 0.4.3,
                       containers >= 0.5.10,
                       generics-sop >= 0.3.2.0,
                       constraints >= 0.10,
                       bifunctors >= 5.5,
                       template-haskell >= 2.12.0.0
  exposed-modules:     Test.StrictCheck
                       Test.StrictCheck.Curry,
                       Test.StrictCheck.Consume,
                       Test.StrictCheck.Produce,
                       Test.StrictCheck.Observe,
                       Test.StrictCheck.Shaped,
                       Test.StrictCheck.Shaped.Flattened,
                       Test.StrictCheck.Internal.Inputs,
                       Test.StrictCheck.Instances,
                       Test.StrictCheck.Instances.Tools,
                       Test.StrictCheck.Demands,
                       Test.StrictCheck.TH,
                       Test.StrictCheck.Examples.Lists,
                       Test.StrictCheck.Examples.Map
                       -- Test.StrictCheck.Scratch.Observe,
                       -- Test.StrictCheck.Scratch.LazyCoArbitrary,
                       -- Test.StrictCheck.Scratch.Nats
  default-extensions:   DataKinds, GADTs, BangPatterns, TypeFamilies, RankNTypes,
                        AllowAmbiguousTypes, UndecidableInstances,
                        DefaultSignatures, TypeApplications, ScopedTypeVariables,
                        FlexibleContexts, ConstraintKinds, DeriveFunctor,
                        FlexibleInstances, StandaloneDeriving, DeriveGeneric,
                        DeriveAnyClass, TypeOperators, PolyKinds, LambdaCase,
                        TupleSections, TypeFamilyDependencies,
                        MultiParamTypeClasses, DerivingStrategies,
                        GeneralizedNewtypeDeriving, ViewPatterns, ImplicitParams,
                        NamedFieldPuns, PatternSynonyms
-- Do something about type defaults?
  ghc-options:         -Wall -fno-warn-unticked-promoted-constructors

test-suite test-strictcheck
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              Tests.hs
  other-modules:        Specs
  default-language:     Haskell2010
  default-extensions:   DataKinds, GADTs, BangPatterns, TypeFamilies, RankNTypes,
                        AllowAmbiguousTypes, UndecidableInstances,
                        DefaultSignatures, TypeApplications, ScopedTypeVariables,
                        FlexibleContexts, ConstraintKinds, DeriveFunctor,
                        FlexibleInstances, StandaloneDeriving, DeriveGeneric,
                        DeriveAnyClass, TypeOperators, PolyKinds, LambdaCase,
                        TupleSections, TypeFamilyDependencies,
                        MultiParamTypeClasses, DerivingStrategies,
                        GeneralizedNewtypeDeriving, ViewPatterns,
                        PatternSynonyms
  ghc-options:         -Wall -fno-warn-unused-imports
  build-depends:        base,
                        HUnit,
                        generics-sop >= 0.3.2.0,
                        deepseq,
                        StrictCheck,
                        QuickCheck

-- executable StrictCheck-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , StrictCheck
--                      , QuickCheck
--   default-language:    Haskell2010
