name:                StrictCheck
version:             0.2.1
-- synopsis:
-- description:
homepage:            https://github.com/kwf/StrictCheck#readme
license:             MIT
license-file:        LICENSE
author:              Kenneth Foner, Hengchu Zhang, and Leo Lampropoulos
maintainer:          kwf@very.science
copyright:           (c) 2018 Kenneth Foner
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       deepseq          >= 1.4   && < 1.5,
                       contravariant    >= 1.4   && < 1.5,
                       mtl              >= 2.2   && < 2.3,
                       transformers     >= 0.5   && < 0.6,
                       QuickCheck       >= 2.10  && < 2.11,
                       extra            >= 1.6   && < 1.7,
                       containers       >= 0.5   && < 0.6,
                       generics-sop     >= 0.3.2 && < 0.4,
                       constraints      >= 0.10  && < 0.11,
                       bifunctors       >= 5.5   && < 5.6,
                       template-haskell >= 2.12  && < 2.13
  exposed-modules:     Test.StrictCheck
                       Test.StrictCheck.Curry,
                       Test.StrictCheck.Consume,
                       Test.StrictCheck.Produce,
                       Test.StrictCheck.Observe,
                       Test.StrictCheck.Shaped,
                       Test.StrictCheck.Shaped.Flattened,
                       Test.StrictCheck.Internal.Inputs,
                       Test.StrictCheck.Instances,
                       Test.StrictCheck.Instances.Tools,
                       Test.StrictCheck.TH,
                       Test.StrictCheck.Examples.Lists,
                       Test.StrictCheck.Examples.Map
  default-extensions:  DataKinds, GADTs, BangPatterns, TypeFamilies, RankNTypes,
                       AllowAmbiguousTypes, UndecidableInstances,
                       DefaultSignatures, TypeApplications, ScopedTypeVariables,
                       FlexibleContexts, ConstraintKinds, DeriveFunctor,
                       FlexibleInstances, StandaloneDeriving, DeriveGeneric,
                       DeriveAnyClass, TypeOperators, PolyKinds, LambdaCase,
                       TupleSections, TypeFamilyDependencies,
                       MultiParamTypeClasses, DerivingStrategies,
                       GeneralizedNewtypeDeriving, ViewPatterns, ImplicitParams,
                       NamedFieldPuns, PatternSynonyms
  ghc-options:         -Wall -fno-warn-unticked-promoted-constructors

test-suite test-strictcheck
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              Tests.hs
  other-modules:        Specs
  default-language:     Haskell2010
  default-extensions:   DataKinds, GADTs, BangPatterns, TypeFamilies, RankNTypes,
                        AllowAmbiguousTypes, UndecidableInstances,
                        DefaultSignatures, TypeApplications, ScopedTypeVariables,
                        FlexibleContexts, ConstraintKinds, DeriveFunctor,
                        FlexibleInstances, StandaloneDeriving, DeriveGeneric,
                        DeriveAnyClass, TypeOperators, PolyKinds, LambdaCase,
                        TupleSections, TypeFamilyDependencies,
                        MultiParamTypeClasses, DerivingStrategies,
                        GeneralizedNewtypeDeriving, ViewPatterns,
                        PatternSynonyms
  ghc-options:         -Wall -fno-warn-unused-imports
  build-depends:        base,
                        HUnit,
                        generics-sop >= 0.3.2.0,
                        deepseq,
                        StrictCheck,
                        QuickCheck

-- executable StrictCheck-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , StrictCheck
--                      , QuickCheck
--   default-language:    Haskell2010
