name:                StrictCheck
version:             0.3.0
synopsis:            StrictCheck: Keep Your Laziness In Check
description: StrictCheck is a property-based random testing framework for
             observing, specifying, and testing the strictness behaviors of Haskell
             functions. Strictness behavior is traditionally considered a non-functional
             property; StrictCheck allows it to be tested as if it were one, by reifying
             demands on data structures so they can be manipulated and examined within
             Haskell.
homepage:            https://github.com/kwf/StrictCheck#readme
license:             MIT
license-file:        LICENSE
author:              Kenneth Foner, Hengchu Zhang, and Leo Lampropoulos
maintainer:          kwf@very.science
copyright:           (c) 2018 Kenneth Foner, Hengchu Zhang, and Leo Lampropoulos
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository this
  type: git
  branch: master
  tag: master
  location: https://github.com/kwf/StrictCheck

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base             >= 4.7   && < 5,
                       QuickCheck       >= 2.10  && < 2.12,
                       containers       >= 0.5   && < 0.7,
                       generics-sop     >= 0.3.2 && < 0.4,
                       bifunctors       >= 5.5   && < 5.6,
                       template-haskell >= 2.12  && < 2.15
  exposed-modules:     Test.StrictCheck
                       Test.StrictCheck.Curry,
                       Test.StrictCheck.Consume,
                       Test.StrictCheck.Produce,
                       Test.StrictCheck.Demand,
                       Test.StrictCheck.Observe,
                       Test.StrictCheck.Observe.Unsafe,
                       Test.StrictCheck.Shaped,
                       Test.StrictCheck.Shaped.Flattened,
                       Test.StrictCheck.Internal.Inputs,
                       Test.StrictCheck.Internal.Unevaluated,
                       Test.StrictCheck.Internal.Shrink,
                       Test.StrictCheck.Internal.Omega,
                       Test.StrictCheck.TH,
                       Test.StrictCheck.Examples.Lists,
                       Test.StrictCheck.Examples.Map
  default-extensions:  DataKinds, GADTs, BangPatterns, TypeFamilies, RankNTypes,
                       AllowAmbiguousTypes, DefaultSignatures, TypeApplications,
                       ScopedTypeVariables, FlexibleContexts,
                       UndecidableInstances, ConstraintKinds, DeriveFunctor,
                       FlexibleInstances, StandaloneDeriving, DeriveGeneric,
                       DeriveAnyClass, TypeOperators, PolyKinds,
                       GeneralizedNewtypeDeriving,
                       ViewPatterns, LambdaCase, TupleSections, ImplicitParams,
                       NamedFieldPuns, PatternSynonyms
  ghc-options:         -Wall -Wno-unticked-promoted-constructors
                       -Wredundant-constraints

test-suite test-strictcheck
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              Tests.hs
  other-modules:        Specs, RefTrans
  default-language:     Haskell2010
  default-extensions:   DataKinds, GADTs, BangPatterns, TypeFamilies, RankNTypes,
                        AllowAmbiguousTypes, UndecidableInstances,
                        DefaultSignatures, TypeApplications, ScopedTypeVariables,
                        FlexibleContexts, ConstraintKinds, DeriveFunctor,
                        FlexibleInstances, StandaloneDeriving, DeriveGeneric,
                        DeriveAnyClass, TypeOperators, PolyKinds, LambdaCase,
                        TupleSections, TypeFamilyDependencies,
                        MultiParamTypeClasses,
                        GeneralizedNewtypeDeriving, ViewPatterns,
                        PatternSynonyms
  ghc-options:         -Wall -fno-warn-unused-imports -O2
  build-depends:        base,
                        HUnit,
                        generics-sop,
                        deepseq,
                        StrictCheck,
                        QuickCheck
